Fixed canvas on window resize, aligned crt image and text+render, made cutout for text diplaying out of crt

--- a/style.css
+++ b/style.css
@@ -3,11 +3,21 @@
   src: url(./font/VPPixel-Simplified.otf) format("opentype");
 }
 
+html {
+  background-color: black;
+}
+
 canvas {
   position: fixed;
+  width: 60%;
   top: 0;
+  bottom: 0;
   left: 0;
+  right: 0;
+  margin: auto;
+  padding-bottom: 11%;
   filter: blur(5px);
+  z-index: 1;
 }
 
 main {
@@ -19,6 +29,8 @@ main {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: 22vh 180vh 100vh 100vh;
+  left: 0;
+  top: 0;
 }
 
 h1,
@@ -39,6 +51,7 @@ header {
   margin-bottom: var(--spacing);
   justify-items: center;
   align-items: center;
+  z-index: 1;
 }
 
 #first {
@@ -58,6 +71,8 @@ header {
   left: 0;
   right: 0;
   margin: auto;
+  z-index: 2;
+
   /* The tv need a turn off bc causes lagg */
 }
 
@@ -73,6 +88,33 @@ header {
   animation-iteration-count: infinite;
   animation-direction: alternate;
   padding: 0px 20%;
+}
+
+#tv-cutout {
+  position: fixed;
+  background-color: white;
+  width: 10vw;
+  height: 10vh;
+  background-color: transparent;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  z-index: 1;
+}
+
+#tv-cutout::before {
+  content: "";
+  position: fixed;
+  width: 700px;
+  height: 750px;
+  box-shadow: 0px 0px 0px 100vw black;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 
 .paragraphs {
@@ -122,6 +164,7 @@ blockquote p {
   position: relative;
   z-index: 0;
   border-radius: 10px;
+  z-index: 2;
 }
 
 .glow-on-hover:before {
